# LeetCode_1000

./: .session.vim  .ycm_extra_conf.py  CMakeLists.txt  settings.gradle
app/: build.gradle
app/src/main/cpp/005.Longest-Palindromic-Substring/: .gdb_history  CMakeLists.txt  app.cpp  solution.h  solution1.cpp
app/src/main/headers/: app.h  solution.h
app/src/test/cpp/: app_test.cpp
leetcode_cpp/: .gdb_history  CMakeLists.txt
leetcode_cpp/001.Two-Sum/: .session.vim  CMakeLists.txt  README.md  main.cpp  solution.h  solution1.cpp  solution2.cpp
leetcode_cpp/002.Add-Two-Numbers/: README.md
leetcode_cpp/003.Longest-Substring-Without-Repeating-Characters/: .log.txt
leetcode_cpp/004.Median-of-Two-Sorted-Arrays/: .session.vim  a.out
leetcode_cpp/005.Longest-Palindromic-Substring/: a.out  solution.cpp
leetcode_cpp/006.ZigZag-Conversion/: solution.cpp
leetcode_cpp/009.Palindrome-Number/: a.out  solution.cpp
leetcode_cpp/012.Integer-to-Roman/: a.out
leetcode_cpp/016.3Sum-Closest/: solution.cpp
leetcode_cpp/018.4Sum/: solution.cpp
leetcode_cpp/019.Remove-Nth-Node-From-End-of-List/: solution.cpp
leetcode_cpp/021.Merge-Two-Sorted-Lists/: .gdb_history  solution.cpp
leetcode_cpp/022.Generate-Parentheses/: solution.cpp
leetcode_cpp/025.Reverse-Nodes-in-k-Group/: solution.cpp
leetcode_cpp/027.Remove-Element/: .gdb_history  .log.txt  solution.cpp
leetcode_cpp/028.Implement-strStr()/: a.out
leetcode_cpp/029.Divide-Two-Integers/: .log.txt
leetcode_cpp/031.Next-Permutation/: next-Permutation.md
leetcode_cpp/032.Longest-Valid-Parentheses/: .gdb_history
leetcode_cpp/033.Search-in-Rotated-Sorted-Array/: .gdb_history
leetcode_cpp/034.Find-First-and-Last-Position-of-Element-in-Sorted-Array/: solution.cpp
leetcode_cpp/037.Sudoku-Solver/: .log.txt
leetcode_cpp/041.First-Missing-Positive/: .gdb_bp
leetcode_cpp/042.Trapping-Rain-Water/: .gdb_bp  .gdb_history  .gdb_py
leetcode_cpp/043.Multiply-Strings/: a.out
leetcode_cpp/045.Jump-Game-II/: .gdb_history  .gdb_py
leetcode_cpp/046.Permutations/: .gdb_history
leetcode_cpp/049.Group-Anagrams/: .log.txt  solution.cpp
src/main/cpp/: .log.txt  .session.vim
src/main/cpp/002.Add-Two-Numbers/: .session.vim  CMakeLists.txt  solution2.cpp
src/main/cpp/003.Longest-Substring-Without-Repeating-Characters/: .gdb_history
src/main/cpp/004.Median-of-Two-Sorted-Arrays/: solution.cpp
src/main/cpp/005.Longest-Palindromic-Substring/: .log.txt  .session.vim  main.cpp  solution2.cpp  solution3.cpp
src/main/cpp/007.Reverse-Integer/: solution.cpp
src/main/cpp/010.Regular-Expression-Matching/: solution.cpp
src/main/cpp/014.Longest-Common-Prefix/: solution.cpp
src/main/cpp/015.3Sum/: a.out
src/main/cpp/016.3Sum-Closest/: a.out
src/main/cpp/020.Valid-Parentheses/: solution.cpp
src/main/cpp/022.Generate-Parentheses/: .gdb_history  a.out
src/main/cpp/023.Merge-k-Sorted-Lists/: a.out
src/main/cpp/024.Swap-Nodes-in-Pairs/: a.out
src/main/cpp/025.Reverse-Nodes-in-k-Group/: a.out
src/main/cpp/026.Remove-Duplicates-from-Sorted-Array/: a.out  solution.cpp
src/main/cpp/028.Implement-strStr()/: .log.txt  solution.cpp
src/main/cpp/029.Divide-Two-Integers/: .gdb_history  solution.cpp
src/main/cpp/031.Next-Permutation/: solution.cpp
src/main/cpp/032.Longest-Valid-Parentheses/: .log.txt
(+105 files in other folders)
